--- a/web/app/src/app/sale/sale.component.html
+++ b/web/app/src/app/sale/sale.component.html
@@ -69,30 +69,25 @@
             </div>
           </div>
           <div class="card-footer">
-            <div class="row">
-              <div class="col-4">
+            <div class="row g-1">
+              <div class="col-6">
                 <button
                   class="btn btn-danger btn-block"
                   (click)="removeItem(item)"
                 >
-                  <i class="fa fa-times me-2"></i>
+                  <i class="fa fa-times me-2"></i>ลบออก
                 </button>
               </div>
-              <div class="col-4">
+              <div class="col-6">
                 <button
                   class="btn btn-success btn-block"
                   (click)="chooseFoodSize(item)"
                   data-bs-toggle="modal"
                   data-bs-target="#modalFoodSize"
                 >
-                  <i class="fa fa-list me-2"></i>
+                  <i class="fa fa-cog me-2"></i>กำหนด
                 </button>
-              </div>
-              <div class="col-4">
-                <button class="btn btn-info btn-block">
-                  <i class="fa fa-file-alt"></i>
-                </button>
-              </div>
+              </div>             
             </div>
           </div>
         </div>
