--- a/web/app/src/app/sidebar/sidebar.component.html
+++ b/web/app/src/app/sidebar/sidebar.component.html
@@ -129,6 +129,16 @@
             </a>
           </li>
 
+              
+          <li class="nav-item">
+            <a routerLink="/bill-sale" class="nav-link">
+              <i class="nav-icon fas file-invoice"></i>
+              <p>
+                    รายงานบิลขาย           
+              </p>
+            </a>
+          </li>
+
      
 
 
